# recruitment_ai

./: .env.example  .gitignore  README.md  docker-compose.yml  flow.md
backend/: .env.example  .gitignore  check_db.py  pyproject.toml  requirements.txt  test_search.py
backend/app/: .readme.md  __init__.py  config.py  main.py
backend/app/agents/: chat_agent.py  graph.py  job_parser_agent.py  resume_parser_agent.py  router_agent.py  search_agent.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  c1.py  candidate.py  chat.py  recruiter.py
backend/app/db/: database.py  repositories.py
backend/app/models/: chat.py  job.py  resume.py  search.py  user.py
backend/app/prompts/: chat_candidate.yaml  chat_recruiter.yaml  job_parser.yaml  loader.py  resume_parser.yaml  router.yaml  search_candidates.yaml  search_jobs.yaml
backend/app/schemas/: requests.py  responses.py
backend/app/services/: auth_service.py  document_service.py  embedding_service.py  langfuse_service.py  qdrant_service.py
backend/tests/: test_agents.py  test_api.py  test_services.py
frontend/: .env.example  .gitignore  .npmrc  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/candidate/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/recruiter/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/thesys/: c1-chat-container.tsx  candidate-card.tsx  chat-container.tsx  (+6 more)
frontend/src/lib/: api.ts  auth.tsx  thesys.ts
frontend/src/types/: index.ts
(+7 files in other folders)
